--- a/default-site.yml
+++ b/default-site.yml
@@ -12,6 +12,9 @@ content:
 ui:
   bundle:
     url: https://github.com/rhpds/showroom_theme_summit/releases/download/v0.0.1/ui-bundle.zip
+  nav:
+    expanded: true
+
 
 runtime:
   cache_dir: ./.cache/antora
@@ -23,4 +26,4 @@ antora:
   extensions:
     - id: dev-mode
       require: ./content/lib/dev-mode.js
-      enabled: true
+      enabled: false
