--- a/default-site.yml
+++ b/default-site.yml
@@ -1,7 +1,6 @@
 ---
 site:
-  title: Red Hat Summit 2024
-  # url: https://redhat-scholars.github.io/course-template
+  title: InstructLab (Red Hat Summit 2024)
   start_page: modules::index.adoc
 
 content:
@@ -12,9 +11,6 @@ content:
 ui:
   bundle:
     url: https://github.com/rhpds/showroom_theme_summit/releases/download/v0.0.1/ui-bundle.zip
-  nav:
-    expanded: true
-
 
 runtime:
   cache_dir: ./.cache/antora
