Corrections for better flow and reflecting the non cached nature of the granite model

--- a/default-site.yml
+++ b/default-site.yml
@@ -1,6 +1,6 @@
 ---
 site:
-  title: InstructLab (Red Hat Summit 2024)
+  title: InstructLab (Summit 2024 Lab)
   start_page: modules::index.adoc
 
 content:
