--- a/default-site.yml
+++ b/default-site.yml
@@ -1,6 +1,6 @@
 ---
 site:
-  title: InstructLab (Summit 2024 Lab)
+  title: Summit Connect - RHEL AI & InstructLab
   start_page: modules::index.adoc
 
 content:
@@ -10,7 +10,7 @@ content:
 
 ui:
   bundle:
-    url: https://github.com/rhpds/showroom_theme_summit/releases/download/v0.0.1/ui-bundle.zip
+    url: https://github.com/rhpds/rhdp_showroom_theme/releases/download/v0.0.1/ui-bundle.zip
 
 runtime:
   cache_dir: ./.cache/antora
