"adjusting title for accuracy"

--- a/default-site.yml
+++ b/default-site.yml
@@ -1,6 +1,6 @@
 ---
 site:
-  title: Summit Connect - RHEL AI & InstructLab
+  title: Summit Connect - Advanced InstructLab Workshop
   start_page: modules::index.adoc
 
 content:
