--- a/default-site.yml
+++ b/default-site.yml
@@ -7,7 +7,7 @@ content:
   sources:
     - url: .
       start_path: content
-#      branches: [main]
+      branches: [v19-updates-summit-connect]
 
 ui:
   bundle:
